# pastis-dev

./: .gitignore  README.md  core.py  draw.py  environment.yml  known_tfop.txt  main.py  parameters.py  simulation.py  spoc_test.csv
pastis/: jktebop-v28.f  pyproject.toml
pastis-core/: README.md  setup.py
pastis-core/pastis/: AstroClasses.py  DataTools.py  Initialisation.py  ModelComparison.py  ObjectBuilder.py  __init__.py  extinction.py  extlib.py  fithist.py  isochrones.py  limbdarkening.py  paths.py  photometry.py  run.py  tools.py  velocimetry.py
pastis-core/pastis.egg-info/: PKG-INFO  SOURCES.txt
pastis-core/pastis/MCMC/: DEMCMC.py  Objects_MCMC.py  PASTIS_MCMC.py  PCA.py  analysis.py  priors.py  tools.py
pastis-core/pastis/lib/fortran/: task2_v28_components.f
pastis-core/pastis/models/: CCF.py  PHOT.py  Pyarome.py  RV.py  RVoriginal.py
pastis-core/pastis/plots/: pyram.py  pyram2.py  traceplots.py  trackplots.py
pastis-core/pastis/priors/: __init__.py  moduleprior.py
pastis-core/pastis/widget/: config_tools.py  object_tools.py  result_tools.py  widget.py
pastis/pastis/: __init__.py  isochrones.py
